# anima-companion

./: .editorconfig  .gitignore  AGENTS.md  License  LuoTianyi_actor_card.json  Phainon_actor_card.json  README.md  package-lock.json  package.json
.github/: README.md  pull_request_template.md
android/: README.md
assets/: README.md
configs/: README.md
docs/: README.md
legacy/: README.md
scripts/: README.md
server/: .env.example  README.md  pyproject.toml
server/.data/: companion.db  cosyvoice_registry.json
server/app/: README.md  __init__.py  dependencies.py  main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: README.md  asr.py  auth.py  chat.py  tts.py  user.py
server/app/core/: settings.py
server/app/repositories/: auth_store.py  session_store.py
server/app/schemas/: auth.py  chat.py  tts.py
server/app/services/: provider_availability.py
server/app/services/asr/: asr_service.py  fun_asr_realtime_client.py  sensevoice_client.py
server/app/services/auth/: captcha_verifier.py  sms_auth_service.py
server/app/services/dialogue/: chat_service.py  gptsapi_anthropic_client.py  llm_output_parser.py  persona_loader.py
server/app/services/tts/: cosyvoice_client.py  cosyvoice_registry.py  gpt_sovits_client.py  qwen_voice_clone_client.py  tts_service.py
server/tests/smoke/: api_smoke.py
server/tests/unit/: test_auth_session_flow.py  test_chat_service_reply_limit.py  test_fun_asr_result_merge.py  test_llm_output_parser.py  test_sms_auth_service.py  test_speech_provider_fallback.py  test_user_clear.py
tests/: README.md
(+185 files in other folders)
