[project]
name = "anima-companion-server"
version = "0.1.0"
description = "Backend services for anima companion android"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
