[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anima-companion-server"
version = "0.1.0"
description = "Backend services for anima companion android"
requires-python = ">=3.11"
dependencies = [
  "alibabacloud-captcha20230305>=1.0.10",
  "alibabacloud-dypnsapi20170525>=2.0.25",
  "dashscope>=1.23.1",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["deploy*", "tests*", "scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
